Aggiornamento e rimozione file segreti